--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MONGO_URI=mongodb://localhost:27017
-REDIS_HOST=redis-14267.c212.ap-south-1-1.ec2.redns.redis-cloud.com
-REDIS_PORT=14267
-REDIS_PASSWORD=0vt7gMO2VkFuugxWFPeMFwJ2yPaLVdAg
+MONGO_URI=mongodb+srv://vimalprakashpk1999:x7Q4oqgQK9Q3s19M@cluster0.gm4r6zu.mongodb.net/myapp?retryWrites=true&w=majority&appName=Cluster0
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
 USERNAME=default
 TELEGRAM_TOKEN=7585175069:AAHHfI3_MByOdKE1tsSlmtoh-ZjhtZV56PI
 TELEGRAM_USER_ID=1603405470
